--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,6 +3,8 @@ Django==5.2.3
 django-cors-headers==4.7.0
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.4.0
+gunicorn==23.0.0
+packaging==25.0
 psycopg2-binary==2.9.10
 PyJWT==2.10.1
 PyMySQL==1.1.0
